ForgotPasswordForCurrentUser method in auth controller
